kube-deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: java-app
  labels:
    app: java-app-__CI_PROJECT_NAME__
    ref: __CI_ENVIRONMENT_SLUG__
spec:
  type: NodePort
  ports:
  - port: 5001
    targetPort: 80
    name: java-app
  selector:
    app: java-app-__CI_PROJECT_NAME__
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app
  labels:
    app: java-app-__CI_PROJECT_NAME__
    ref: __CI_ENVIRONMENT_SLUG__
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-app-__CI_PROJECT_NAME__
  template:
    metadata:
      labels:
        app: java-app-__CI_PROJECT_NAME__
        ref: __CI_ENVIRONMENT_SLUG__
      annotations:
        app.gitlab.com/app: __CI_PROJECT_PATH_SLUG__
        app.gitlab.com/env: __CI_ENVIRONMENT_SLUG__
    spec:
      containers:
      - name: java-app
        image: __CI_REGISTRY_IMAGE__/java-app:__VERSION__
        ports:
        - containerPort: 80
          name: java-app
# Ingress Resource
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
  labels:
    app: ingress-__CI_PROJECT_NAME__
    ref: __CI_ENVIRONMENT_SLUG__    
spec:
  tls:
  - hosts:
    - __CI_ENVIRONMENT_SLUG__.java-app.__KUBE_INGRESS_BASE_DOMAIN__
    - __CI_ENVIRONMENT_SLUG__.__KUBE_INGRESS_BASE_DOMAIN__
  rules:
  - host: __CI_ENVIRONMENT_SLUG__.java-app.__KUBE_INGRESS_BASE_DOMAIN__
    http:
      paths: 
      - path: /
        backend:
          serviceName: java-app
          servicePort: 5001
